--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -295,6 +295,44 @@
             <scope>runtime</scope>
         </dependency>
         
+        <!-- Document management modules -->
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>document-management-api</artifactId>
+            <version>2.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>document-viewer-service</artifactId>
+            <version>2.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>document-viewer</artifactId>
+            <version>2.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>document-thumbnails</artifactId>
+            <version>2.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>video-thumbnails</artifactId>
+            <version>2.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>gateway</artifactId>
+            <version>2.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        
         <!-- Pre-packaged demo sites -->
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
