--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -291,7 +291,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap-acme-space-templates</artifactId>
-            <version>2.0.1</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         
