--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -337,7 +337,7 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespaceelektra</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
