--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -268,7 +268,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.4.1</version>
+            <version>4.4.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 	</dependencies>
