--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -248,6 +248,12 @@
             <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+           <groupId>org.jahia.modules</groupId>
+           <artifactId>external-provider-users-groups</artifactId>
+           <version>1.0.0-SNAPSHOT</version>
+           <scope>runtime</scope>
+       </dependency>
 
         <!-- RESTful API -->
         <dependency>
