--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -259,7 +259,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
