--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -364,7 +364,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>newsletter</artifactId>
-            <version>2.0.1</version>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
