--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -323,13 +323,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-thumbnails</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>video-thumbnails</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
