--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -411,7 +411,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.apache.tomcat</groupId>
-                                    <artifactId>apache-tomcat</artifactId>
+                                    <artifactId>tomcat</artifactId>
                                     <version>${jahia.tomcat.version}</version>
                                     <type>zip</type>
                                     <overWrite>false</overWrite>
