--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -76,7 +76,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>7.1.0.1-SNAPSHOT</version>
+        <version>7.1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-core-modules</artifactId>
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -117,7 +117,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -129,25 +129,25 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.0.1-SNAPSHOT</version>
+            <version>3.0.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.0.1-SNAPSHOT</version>
+            <version>3.0.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.0.1-SNAPSHOT</version>
+           <version>1.0.1</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.0.1-SNAPSHOT</version>
+            <version>3.0.1</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -172,19 +172,19 @@
             <!-- RESTful API -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcrestapi</artifactId>
-            <version>2.2.0-SNAPSHOT</version>
+            <version>2.2.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jquery</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>macros</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -196,7 +196,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -213,13 +213,13 @@
         </dependency><dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency><dependency>
             <groupId>org.jahia.modules</groupId>
@@ -236,7 +236,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -254,7 +254,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -265,7 +265,7 @@
         </dependency><dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.1-SNAPSHOT</version>
+            <version>7.1.1</version>
             <scope>runtime</scope>
         </dependency><dependency>
             <groupId>org.jahia.modules</groupId>
