--- a/pom.xml
+++ b/pom.xml
@@ -77,22 +77,22 @@
     <parent>
         <groupId>org.jahia</groupId>
         <artifactId>jahia-parent</artifactId>
-        <version>7.1.0.1-SNAPSHOT</version>
+        <version>7.1.0.1</version>
         <relativePath>../jahia/jahia-parent/pom.xml</relativePath>
     </parent>
     
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-root</artifactId>
-  <version>7.1.0.1-SNAPSHOT</version>
+  <version>7.1.0.1</version>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
     <packaging>pom</packaging>
     <description>Jahia CE Full Package</description>
 
     <scm>
-        <connection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_7_1_0_1_RC</connection>
-        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_7_1_0_1_RC</developerConnection>
-        <url>https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_7_1_0_1_RC</url>
+        <connection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_7_1_0_1</connection>
+        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_7_1_0_1</developerConnection>
+        <url>https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_7_1_0_1</url>
     </scm>
 
     <repositories>
